tests/ui/structs/default-field-values-failures.stderr
error[E0277]: the trait bound `S: Default` is not satisfied
  --> $DIR/default-field-values-failures.rs:14:5
   |
LL | #[derive(Debug, Default)]
   |                 ------- in this derive macro expansion
LL | pub struct Bar {
LL |     pub bar: S,
   |     ^^^^^^^^^^ the trait `Default` is not implemented for `S`
   |
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `S` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | pub struct S;
   |

error: missing mandatory field `bar`
  --> $DIR/default-field-values-failures.rs:21:21
   |
LL |     let _ = Bar { .. };
   |                     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
